making OT-Resolver working again